tests/fixtures/invalid/pow_none_bool_set.py
# Cannot call pow() with None, Bool, Set[int]
x = pow(None, True, {1, 2, 3})
